# DraftDiff

./: .gitignore  README.md  docker-compose.yml
Documentation/API/: README.md
Documentation/ML/: PROCESS.md  README.md
Documentation/Postman/: DraftDiff-Riot-API.postman_collection.json  README.md
Scripts/: setup_macos_linux.sh  setup_windows.ps1
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: predictions.py  riot.py
backend/app/core/: config.py
backend/app/services/: prediction_service.py  riot_client.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
ml/: README.md  pyproject.toml
ml/src/cli/: collect_and_build.py  compute_lane_wr_from_matches.py
ml/src/data/: riot_fetch.py  schemas.py
ml/src/etl/: parse_match.py
ml/src/features/: featurize.py  matchup_features.py
ml/src/pipelines/: build_training_set.py
ml/src/train/: train_lightgbm.py
ml/src/utils/: jsonio.py  roles.py
