[tool.poetry]
name = "draftdiff-backend"
version = "0.1.0"
description = "FastAPI backend for DraftDiff"
authors = ["DraftDiff Team <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
SQLAlchemy = "^2.0.30"
psycopg = { extras = ["binary"], version = "^3.1.19" }
redis = "^5.0.4"
scikit-learn = "^1.5.0"
joblib = "^1.4.2"
lightgbm = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
ruff = "^0.4.8"
black = "^24.4.2"
isort = "^5.13.2"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
