[tool.poetry]
name = "draftdiff-ml"
version = "0.1.0"
description = "ML workspace for DraftDiff: data acquisition, feature engineering, training"
authors = ["DraftDiff Team <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
httpx = "^0.27.0"
pydantic = "^2.7.0"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
scikit-learn = "^1.5.0"
lightgbm = "^4.3.0"
joblib = "^1.4.2"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.8"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


